force-app/main/default/objects/Threshold_Config__mdt/Threshold_Config__mdt.object-meta.xml
<CustomObject>
    <label>Threshold Config</label>
    <pluralLabel>Threshold Configs</pluralLabel>
</CustomObject>