force-app/main/default/objects/Threshold_Config__mdt/fields/Critical_Percent__c.field-meta.xml
<CustomField>
    <fullName>Critical_Percent__c</fullName>
    <label>Critical Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>