force-app/main/default/objects/Threshold_Config__mdt/fields/Critical_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Critical_Threshold__c</fullName>
    <label>Critical Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>