force-app/main/default/objects/Threshold_Config__mdt/fields/KPI_Type__c.field-meta.xml
<CustomField>
    <fullName>KPI_Type__c</fullName>
    <label>KPI Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>