force-app/main/default/objects/Threshold_Config__mdt/fields/Warning_Percent__c.field-meta.xml
<CustomField>
    <fullName>Warning_Percent__c</fullName>
    <label>Warning Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>