force-app/main/default/objects/Threshold_Config__mdt/fields/Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Warning_Threshold__c</fullName>
    <label>Warning Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>